<resources>
    <string name="app_name">Ticket to Ride</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="host">Host</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="create_new_game">Create New Game</string>
    <string name="game_name">Game Name</string>
    <string name="private_question">Private?</string>
    <string name="players">Players</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string-array name="player_number_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="player_colors_array">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Black</item>
    </string-array>
    <string name="send">Send</string>
    <string name="newMessage">New Message</string>
    <string name="username">Username</string>
    <string name="playerImage">Player Image</string>
    <string name="connectedPlayers">Connected Players</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="welcomeMessage">Welcome to Ticket To Ride</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notRegisteredMessage">Not a User? Register Here</string>
    <string name="startGame">Start Game</string>
    <string name="chooseAColor">Choose a Color"</string>
    <string name="numberOfPlayers">Number of Players</string>
    <string name="register_greeting">Register Your Account</string>
    <string name="register_button">Register</string>
    <string name="register_username_field">Username</string>
    <string name="register_password_field">Password</string>
    <string name="register_confirm_password_field">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_tab">Chat</string>
    <string name="game_history_tab">History</string>
    <string name="history_action">Action</string>
    <string name="return_these_tickets">Keep Selected Tickets</string>
    <string name="close">Close</string>
    <string name="use_these_cards">Use These Cards</string>
    <string name="claim_route_instructions">You must choose # cards</string>
    <string name="cannot_take_wild">You cannot take a Locomotive this time</string>
    <string name="cannot_use_this_card">You cannot use this card</string>
    <string name="passwords_dont_match">Passwords do not match!</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="repeat_register">This Username Already Exists</string>
    <string name="last_round">This is the last round of turns!</string>
    <string name="name_not_specified">Game Name not specified</string>
    <string name="winner">Winner</string>
    <string name="total_points">Total</string>
    <string name="routes">Routes</string>
    <string name="tickets">Tickets</string>
    <string name="bonus">Bonus</string>
    <string name="no_bonuses">No Bonuses</string>
    <string name="chat_title"> sent a message</string>
    <string name="train_card_deck_empty">There aren\t enough train cards</string>
    <string name="tickets_empty">There aren\'t enough tickets</string>
    <string name="fatal_server_error">There was a fatal server error!</string>
    <string name="finish_game">Finish Game</string>
    <string name="server_disconnected">Trying to Connect to the Server</string>
</resources>
